# OpenSRX

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pixi.toml
.github/workflows/: ci.yml
docs/: Doxyfile  Makefile  conf.py  mainpage.md
docs/guides/: building.md  examples.md  getting_started.md  serial_vs_socket.md
examples/: CMakeLists.txt  VersionInfo.cpp  hello_opensrx.cpp
include/OpenSRX/: AsioInterface.hpp  Bank.hpp  BankParam.hpp  CommParam.hpp  ICommInterface.hpp  OpenSRX.hpp  OperationParam.hpp  ParamTypeMap.hpp  ParamValues.hpp  RegionParam.hpp  Scanner.hpp  SerialInterface.hpp  SocketInterface.hpp  Timestamp.hpp  TuningParam.hpp  Utils.hpp  Version.hpp.in
include/opensrx/: api.hpp  app.hpp  version.hpp.in
scripts/: simulator.py
src/: AsioInterface.cpp  Bank.cpp  CMakeLists.txt  ICommInterface.cpp  Scanner.cpp  SerialInterface.cpp  SocketInterface.cpp  Timestamp.cpp  Utils.cpp  app.cpp
tests/: CMakeLists.txt  MockCommInterface.hpp  TestICommInterface.cpp  TestICommInterface.hpp  TestOpenSRX.cpp  TestOpenSRX.hpp  TestTimestamp.cpp  TestUtils.cpp  app_test.cpp
